--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
     "start": "ts-node ./bin/www"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.1",
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
