--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.8.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5"
   },
