--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -19,7 +21,9 @@
     "express": "~4.16.1",
     "http-errors": "^1.8.0",
     "morgan": "~1.9.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
