--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
@@ -20,6 +21,7 @@
     "ejs": "^3.1.5",
     "express": "~4.16.1",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
