--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
@@ -25,6 +26,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
