--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -17,6 +18,7 @@
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
