--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.5",
     "express": "~4.16.1",
     "http-errors": "^1.8.0",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
