--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
+    "joi": "^17.3.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
