feat: 설치 - TypeORM
- TypeORM 패키지 설치
- config 파일 작성
- Connection 생성 로직 추가
- decorator 사용을 위한 tsconfig 변경

--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,9 @@
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
